--- a/styles/style.css
+++ b/styles/style.css
@@ -79,3 +79,10 @@ background-image:url(../imgs/apache.png);
 	padding:10px;
 
 }
+
+#disparo {
+	width: 50px;
+	height: 8px;
+	position: absolute;
+	background-image: url(../imgs/disparo.png);
+}
